--- a/src/app/utilities/accordion/accordion.component.scss
+++ b/src/app/utilities/accordion/accordion.component.scss
@@ -16,8 +16,10 @@
     font-size: 16px;
     font-weight: 600;
 }
-// .input-label-text {
-// }
+.input-label-text {
+    // line-height: 18px;
+    // font-size: 16px;
+}
 .accodion-content-section {
     display: flex;
     align-items: center;
